--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,38 +1,87 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {# Run `composer require symfony/webpack-encore-bundle`
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}Welcome!{% endblock %}</title>
+    {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
-        {% block stylesheets %}
-            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-        {% endblock %}
+    <!-- {% block stylesheets %}
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    {% endblock %} -->
+    <link href="{{ asset('css/style.css') }}" rel="stylesheet">
+    <script
+            src="https://code.jquery.com/jquery-3.6.0.min.js"
+            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+            crossorigin="anonymous"></script>
+    {% block javascripts %}
+        {# {{ encore_entry_script_tags('app') }} #}
+    {% endblock %}
+</head>
+<body id="{% block idpage %}{% endblock %}" class="{% block classpage %}{% endblock %}">
 
-        {% block javascripts %}
-            {#{{ encore_entry_script_tags('app') }}#}
-        {% endblock %}
-    </head>
-    <body>
+{% block header2 %}
     <header>
-        <div class="navbar navbar-dark bg-dark shadow-sm">
-            <div class="container">
-                <a href="#" class="navbar-brand d-flex align-items-center">
-                    <strong>Jeu</strong>
-                </a>
-                <span class="text-white">
-                {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-                    Bonjour {{ app.user.firstName }}. <a href="{{ path('app_logout') }}">Me déconnecter</a>
-                {% else %}
-                    <a href="{{ path('app_login') }}">Me connecter</a>
-                    <a href="{{ path('app_registration') }}">S'inscrire</a>
-                {% endif %}
-                    </span>
-            </div>
-        </div>
+        <img src="{{asset('img/logo.png')}}" alt="">
+        <span class="co">
+            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                Bonjour {{ app.user.firstName }}. <a href="{{ path('app_logout') }}">Me déconnecter</a>
+            {% else %}
+                <a href="{{ path('app_login') }}">Me connecter</a>
+                <a href="{{ path('app_registration') }}">S'inscrire</a>
+            {% endif %}
+        </span>
     </header>
+{% endblock %}
+
+<div class="main">
+    {% block header %}
+        <header>    
+            <div class="animate__animated animate__fadeInDown" id="lang">
+                <a href="#">
+                    <img src="{{ asset('img/anglais.svg') }}" class="lang" alt="Passer en anglais">
+                </a>
+            </div>
+            <div id="logo">
+                <a href="index.php">
+                    <img class="animate__animated animate__bounceInDown animate__slow" src="{{asset('img/logo.png')}}">
+                </a>
+            </div>
+        </header>
+    {% endblock %}
+    
+    
+    
     <main class="container">
         {% block body %}{% endblock %}
     </main>
-    </body>
+</div>
+
+
+{% block footer %}
+    <footer>
+        <div id="logoCalicot">
+            <a href="https://mmi19e09.mmi-troyes.fr/calicot/">
+                <img src="{{asset('img/calicotlogo.svg')}}" alt="logo agence Calicot">
+            </a>
+        </div>
+        <div id="liens">
+            <ul id="haut">
+                <li><a href="#">Contact</a></li>
+                <li><a href="https://mmi19e09.mmi-troyes.fr/calicot/">L'agence Calicot</a></li>
+                <li><a class="button" href="#newsletter">Newsletter</a></li>
+            </ul>
+            <div id="bas">
+                <a href="CGU.php" class="mentions">Mentions légales</a>
+                <ul id="RS">
+                    <li><a href="https://www.instagram.com/pas_de_quartier/?hl=fr"><img src="{{asset('img/instagram.svg')}}" alt="instagram"></a></li>
+                    <li><a href="https://www.youtube.com/channel/UCaEg-PG8iznMI2U2QZnr3hA"><img src="{{asset('img/youtube.svg')}}" alt="youtube"></a></li>
+                    <li><a href="https://www.facebook.com/cali.cot.75"><img src="{{asset('img/facebook.svg')}}" alt="facebook"></a></li>
+                </ul>
+            </div>                
+        </div>
+    </footer>
+{% endblock %}
+
+
+</body>
 </html>
