--- a/templates/security/modification.html.twig
+++ b/templates/security/modification.html.twig
@@ -1,13 +1,11 @@
 {% extends 'base.html.twig' %}
 
-
 {% block title %}Modification{% endblock %}
 
-{% block stylesheets %}
-    <link rel="stylesheet" href="{{ asset('css/style.css') }}" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+{% block idpage %}modif{% endblock %}
+{% block classpage %}formulaire label{% endblock %}
 
-{% endblock %}
+{% block header2 %}{% endblock %}
 
 {% block body  %}
     <h1>Modification de votre profil</h1>
@@ -17,20 +15,27 @@
     {{ form_start(form) }}
     <br>
 
-    <br>
-    {{ form_row(form.firstname, {'label':'Prénom','attr': {'placeholder':'Prénom...'}}) }}
-    <br>
-    {{ form_row(form.lastname, {'label':'Nom','attr': {'placeholder':'Nom...'}}) }}
-    <br>
-    {{ form_row(form.birthday, {'label':'Date de naissance','attr': {'placeholder':'Date de naissance'}}) }}
-    <br>
-    {{ form_row(form.password, {'label':'Mot de passe','attr': {'placeholder':'Mot de passe...'}})}}
-
-
-
-
-    <br><br>
+    <div class="prenom input">
+        {{ form_row(form.firstname, {'label':'Prénom','attr': {'placeholder':'Prénom...'}}) }}
+    </div>
+    <div class="nom input">
+        {{ form_row(form.lastname, {'label':'Nom','attr': {'placeholder':'Nom...'}}) }}
+    </div>
+    <div class="naissance input">
+        {{ form_row(form.birthday, {'label':'Date de naissance','attr': {'placeholder':'Date de naissance'}}) }}
+    </div>
+    <div class="psw input">
+        {{ form_row(form.password, {'label':'Mot de passe','attr': {'placeholder':'Mot de passe...'}})}}
+    </div>
 
     {{ form_end(form) }}
+
+    <div class="bas">
+        <div class="requin">
+            <img src="{{asset('img/requin.svg')}}" alt="megalodon">
+        </div>
+
+    
+    </div>
 
 {% endblock %}
