--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -1,35 +1,80 @@
 {% extends 'base.html.twig' %}
 
-  {% block stylesheets %}
-      <link rel="stylesheet" href="{{ asset('css/style.css') }}" />
-
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-  {% endblock %}
 {% block title %}Profil{% endblock %}
+
+{% block idpage %}profil{% endblock %}
+{% block classpage %}formulaire{% endblock %}
+
+{% block header2 %}{% endblock %}
 
 {% block body %}
 
     {% for message in app.flashes('message') %}
         <h2 style="color: green;">{{ message }}</h2>
     {% endfor %}
-<h1>Bonjour {{ user.firstName }}</h1>
-    <h2>voici vos informations:</h2>
-    <br><br>
+    <h1>Profil {{ user.firstName }}</h1>
 
+    <div class="profil">
+        <section class="image">
+            <img src="{{asset('img/profil.png')}}" alt="img profil">
+        </section>
+        <section class="infos">
+            <p>
+                <strong>prenom: </strong>
+                {{ user.firstName}}
+            </p>
+            <p>
+                <strong>nom: </strong>
+                {{ user.lastName}}
+            </p>
+            <p>
+                <strong>email: </strong>
+                {{ user.email}}
+            </p>
+            <p>
+                <strong>Date de naissance: </strong>
+                {{ user.birthday|date("m/d/Y")}}
+            </p>
+            <button type="submit" class="btn btn-success"><a id="mod" href="{{ path('app_modification') }}">modifier le profil</a></button>
+        </section>
+    </div>
 
-        <strong>prenom:</strong>
-        <div>{{ user.firstName}}</div>
-    <br>
-        <strong>nom:</strong>
-        <div>{{ user.lastName}}</div>
-    <br>
-    <strong>email:</strong>
-    <div>{{ user.email}}</div>
+    <div class="tableau">
+        <div>
+            <section>Victoires</section>
+            <section>{{ stats.victoires }}</section>
+        </div>
+        <div>
+            <section>Défaites</section>
+            <section>{{ stats.defaites }}</section>
+        </div>
+        <div>
+            <section>Nombre de parties</section>
+            <section>{{ stats.parties }}</section>
+        </div>
+    </div>
 
-    <br>
-    <strong>Date de naissance:</strong>
-    <div>{{ user.birthday|date("m/d/Y")}}</div>
-    <br><br>
-    <button type="submit" class="btn btn-success"><a id="mod" href="{{ path('app_modification') }}">modifier le profil</a></button>
+    <!-- <strong>Victoires</strong>
+    <div>{{ stats.victoires }}</div>
+
+    <strong>Défaites</strong>
+    <div>{{ stats.defaites }}</div>
+
+    <strong>Nombre de parties</strong>
+    <div>{{ stats.parties }}</div> -->
+
+    <div class="bas">
+        <!-- <div class="requin">
+            <img src="{{asset('img/requin.svg')}}" alt="megalodon">
+        </div> -->
+
+        <div class="lien">
+            <a href="{{ path('new_game') }}">
+                <span>JOUER</span>
+                <img src="{{asset('img/epee.svg')}}" alt="">
+            </a>
+        </div>
+    </div>
+
 
 {% endblock %}
