--- a/templates/security/registration.html.twig
+++ b/templates/security/registration.html.twig
@@ -11,7 +11,7 @@
 
 {{ form_start(form) }}
 <div class="email input">
-    {{ form_row(form.email, {'label for = imputEmail':'Adresse mail','attr': {'placeholder':'Adress email...'}}) }}
+    {{ form_row(form.email, {'label for = imputEmail':'Adresse mail','attr': {'placeholder':'Adresse email...'}}) }}
 </div>
 <div class="prenom input">
     {{ form_row(form.firstname, {'label':'Prénom','attr': {'placeholder':'Prénom...'}}) }}
