--- a/templates/base2.html.twig
+++ b/templates/base2.html.twig
@@ -2,12 +2,11 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Welcome!{% endblock %}</title>
+    <title>{% block title %}Bonne chance !{% endblock %}</title>
     {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
     {% block stylesheets %}
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-
+        <link href="{{ asset('css/style.css') }}" rel="stylesheet">
     {% endblock %}
 
     <script
@@ -18,8 +17,8 @@
         {# {{ encore_entry_script_tags('app') }} #}
     {% endblock %}
 </head>
-<body>
-<header>
+<body class="plateau">
+{# <header>
     <div class="navbar navbar-dark bg-dark shadow-sm">
         <div class="container">
             <a href="#" class="navbar-brand d-flex align-items-center">
@@ -35,7 +34,7 @@
                     </span>
         </div>
     </div>
-</header>
+</header> #}
 <main class="container">
     {% block body %}{% endblock %}
 </main>
