--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -15,18 +15,18 @@
 
         {% if app.user %}
             <div class="mb-3">
-                You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+                Vous êtes connecté en tant que {{ app.user.username }}, <a href="{{ path('app_logout') }}">Déconnexion </a>
             </div>
         {% endif %}
 
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+        <h1 class="h3 mb-3 font-weight-normal">Connecter vous</h1>
         <div class="email input">
             <!-- <label for="inputEmail">Email</label> -->
             <input type="email" value="{{ last_username }}" name="email" placeholder="Email" id="inputEmail" class="form-control" required autofocus>
         </div>
         <div class="psw input">
             <!-- <label for="inputPassword">Password</label> -->
-            <input type="password" name="password" placeholder="Password" id="inputPassword" class="form-control" required>
+            <input type="password" name="password" placeholder="Mot de passe" id="inputPassword" class="form-control" required>
         </div>
 
         <input type="hidden" name="_csrf_token"
@@ -45,7 +45,7 @@
         #}
 
         <button class="btn btn-lg btn-primary" type="submit">
-            Sign in
+            S'identifier
         </button>
     </form>
 {% endblock %}
